syntax = "proto3";

option go_package = "github.com/matherique/lp2-sbo-api/internal/proto/book";

service BookService {
  rpc Create (CreateData) returns (Book) {}
  rpc Update (UpdateData) returns (Book) {}
	rpc FindAll (Empty) returns (BookList) {}
	rpc Find (FindData) returns (Book) {}
}

message BookList {
	repeated Book books = 1;
}

message Empty { }

message FindData {
	string title = 1;
	string author = 2;
}

message Book {
	int32 id = 1;
	string name = 2;
	string photo = 3;
	int32 authorId = 4;
	string shortDesc = 5;
	string longdesc = 6;
	int32 categoryId = 7;
	int32 paperBack = 8;
	int32 publisherId = 9;
	string createdAt = 10;
	string updatedAt = 11;
}

message CreateData {
	string name = 1;
	string photo = 2;
	int32 authorId = 3;
	string shortDesc = 4;
	string longdesc = 5;
	int32 categoryId = 6;
	int32 paperBack = 7;
	int32 publisherId = 8;
}

message UpdateData {
	int32 Id = 1;
	Book book = 2;
}